--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
       <version>5.2.1.RELEASE</version>
     </dependency>
     <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.1.6.Final</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
       <version>5.2.1.RELEASE</version>
