--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,12 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
-      <version>5.2.1.RELEASE</version>
+      <version>5.3.5</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>5.2.1.RELEASE</version>
+      <version>5.3.5</version>
     </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
@@ -43,7 +43,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>5.2.1.RELEASE</version>
+      <version>5.3.5</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -51,14 +51,20 @@
       <version>6.0.5</version>
     </dependency>
     <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>2.4.7</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
-      <version>5.2.1.RELEASE</version>
+      <version>5.3.5</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>5.2.1.RELEASE</version>
+      <version>5.3.5</version>
     </dependency>
     <dependency>
       <groupId>org.thymeleaf</groupId>
